only apply preserve-3d to safari (prevents blurring), added matrix cleaning for m.tx and m.ty

--- a/css/jquery.freetrans.css
+++ b/css/jquery.freetrans.css
@@ -6,11 +6,6 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-    transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    -mos-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
 }
 
 .ft-scaler {
